--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -80,7 +80,7 @@
     }
 
     li {
-        
+
 
         a {
 
@@ -94,7 +94,8 @@
                 margin: 0 2rem;
 
                 color: $color-text;
-                font-size: 2rem;
+                font-size: 18px;
+                font-weight: 300;
                 transition: all .5s;
                 // padding: .5rem 3rem;
                 // margin: 0 2rem;
@@ -114,9 +115,12 @@
                     @include shadow;
                 }
 
-                background-color: $color-primary;
-                border-radius: 5rem;
+                // background-color: $color-primary;
+                // border-radius: 5rem;
+                @include shadow;
                 color: white;
+                background-color: $color-text;
+                border-radius: 8px;
 
                 &::after {
                     opacity: 0;
@@ -129,10 +133,33 @@
 
             & .active,
             &:hover {
-                background-color: $color-primary !important;
                 @include shadow;
+                color: white;
+                background-color: $color-text;
+                border-radius: 8px;
             }
         }
     }
+}
+
+
+
+@mixin btn($color, $bc, $py, $px){
+    text-decoration: none;
+    color: $color;
+    background-color: $bc;
+    padding: $py $px;
+    transition: .3s all ease-in-out;
+    font-size: 15px;
+    border-radius: 8px;
+
+    &:hover {
+        color: $bc;
+        background-color: $color;
+        @include shadow;
+    }
 
 }
+
+
+
