--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -26,3 +26,38 @@ body {
     font-family: 'Poppins', sans-serif;
     color: $color-text;
 }
+
+img {
+    max-width: 100%;
+}
+
+h3 {
+    margin: 5rem 0;
+    font-size: 45px;
+    font-weight: 400;
+    line-height: 1;
+
+    
+}
+
+.heading {
+    margin-top: 10rem;
+    text-align: center;
+
+    & h3 {
+        @include respond(phone){
+            margin-bottom: 3rem;
+        }
+    }
+    
+}
+
+// .heading {
+//     width: 1000px;
+//     margin: 5rem auto;
+
+//     @include respond(tab-land){
+//         width: 90%;
+//     }
+// }
+
