--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -25,10 +25,10 @@
     }
 
     & h4 {
-        font-size: 26px;
-        font-weight: 400;
+        font-size: 23px;
+        // font-weight: 400;
         text-transform: uppercase;
-        margin-bottom: 3rem;
+        margin-bottom: 2rem;
         line-height: 1;
     }
 
